--- a/index.html
+++ b/index.html
@@ -5,11 +5,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP-Landing-Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="section header-section">
+            <div class="nav-bar">
+                <h1 class="logo">Header Logo</h1>
+                <div class="nav-item">
+                    <ul class="items">
+                        <li class="nav-links">header link one</li>
+                        <li class="nav-links">header link two</li>
+                        <li class="nav-links">header link three</li>
+                    </ul>
+                </div>
+            </div>
 
+            <div class="section hero-section">
+                <div class="left-hero">
+                    <h1 class="hero-main">This Website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title.Its a smaller font and the color is lower in contrast.</p>
+                    <button class="cta-btn">Sign Up</button>
+                </div>
+                <div class="right-hero">
+                    <div>
+                        <img src="/img/pexels-shkrabaanthony-5816293(1).jpg" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section info-section">
+            <h2>Some random information</h2>
+            <div class="modals">
+                <div class="modal">
+                    <img src="/img/dummy-image.jpg" alt="img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="modal">
+                    <img src="/img/dummy-image.jpg" alt="img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="modal">
+                    <img src="/img/dummy-image.jpg" alt="img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="modal">
+                    <img src="/img/dummy-image.jpg" alt="img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="section quote-section">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know that it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="section cta-section">
+            <div class="cta">
+                <div class="cta-info">
+                    <h1>Call to action. It's time</h1>
+                    <p>Sign up for out product by clickig the button right over there. </p>
+                </div>
+                <button class="cta-btn-two">Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p class="copyright">Copyright <span>&#169</span> The Odin Project 2021</p>
+        </div>
+    </div>
 </body>
 
 </html>
