--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="right-hero">
                     <div>
-                        <img src="/img/pexels-shkrabaanthony-5816293(1).jpg" alt="" srcset="">
+                        <img src="./img/pexels-shkrabaanthony-5816293(1).jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -43,19 +43,19 @@
             <h2>Some random information</h2>
             <div class="modals">
                 <div class="modal">
-                    <img src="/img/dummy-image.jpg" alt="img">
+                    <img src="./img/dummy-image.jpg" alt="img">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="modal">
-                    <img src="/img/dummy-image.jpg" alt="img">
+                    <img src="./img/dummy-image.jpg" alt="img">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="modal">
-                    <img src="/img/dummy-image.jpg" alt="img">
+                    <img src="./img/dummy-image.jpg" alt="img">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="modal">
-                    <img src="/img/dummy-image.jpg" alt="img">
+                    <img src="./img/dummy-image.jpg" alt="img">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
